new file pytest ini and edits gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@ dubag.py
 venv/
 scr/
 pytest_cache/
+#allure
 TestResultContainer/
+#testing pqge
 pages/problem_user.py
 test_page/test_problem_user.py
+#secrets data
 .env
 
 
