new file for project

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,10 @@
 [pytest]
 markers =
-    critical
-    UI
-    smoke
-    regress
+    development: Launch tests for development serve
+    smoke: Launch test for first case
+    regress: Launch test if have issues
+
+
+addopts = -s -v
 
 
